update - add pree-commit hook - update group name in poetry - make path.py to use in common - exchange db url string to CONST in common.config.settings - exchange Exception to self.init_app() in get_db method

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,7 +17,7 @@ uvicorn = "^0.20.0"
 pytest = "^7.2.1"
 
 
-[tool.poetry.group.common.dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
 
 [build-system]
