--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,9 @@ fastapi = "^0.92.0"
 sqlalchemy = "^2.0.4"
 pymysql = "^1.0.2"
 uvicorn = "^0.20.0"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pydantic = {extras = ["email"], version = "^1.10.5"}
 
 
 [tool.poetry.group.test.dependencies]
