--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ uvicorn = "^0.20.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pydantic = {extras = ["email"], version = "^1.10.5"}
+emails = "^0.6"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.group.test.dependencies]
