--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pydantic = {extras = ["email"], version = "^1.10.5"}
 emails = "^0.6"
 jinja2 = "^3.1.2"
+alembic = "^1.10.2"
 
 
 [tool.poetry.group.test.dependencies]
