--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,19 @@ pytest = "^7.2.1"
 httpx = "^0.23.3"
 
 
+[tool.pytest.ini_options]
+markers = [
+    "signup",
+    "verify_email",
+    "login",
+    "reset_password",
+    "change_password",
+    "read_user",
+    "update_user",
+    "delete_user",
+]
+
+
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
 
