--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,9 @@ markers = [
     "read_user",
     "update_user",
     "delete_user",
+    "read_post", 
+    "read_posts", 
+    "delete_post", 
 ]
 
 
