TEST: add tests about create_post and update_post api

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,7 +35,9 @@ markers = [
     "update_user",
     "delete_user",
     "read_post", 
-    "read_posts", 
+    "read_posts",
+    "create_post",
+    "update_post",  
     "delete_post", 
 ]
 
