CONF: add pre-commit to poetry

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^7.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
+pre-commit = "^3.2.2"
 
 [build-system]
 requires = ["poetry-core"]
