--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,11 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
 
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.4.0
+    hooks:
+    -   id: add-trailing-comma
+
   # black - formatting
   - repo: https://github.com/psf/black
     rev: 23.3.0
