--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ pydantic = {extras = ["email"], version = "^1.10.5"}
 emails = "^0.6"
 jinja2 = "^3.1.2"
 alembic = "^1.10.2"
+add-trailing-comma = "^2.4.0"
 
 
 [tool.poetry.group.test.dependencies]
