--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,23 @@ services:
       - mysql_db:/var/lib/mysql
     ports:
       - 3306:3306
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "exit | mysql -h localhost -P 3306 -u$$MYSQL_USER -p$$MYSQL_ROOT_PASSWORD"
+        ]
+      interval: 5s
+      timeout: 2s
+      retries: 10
 
   app:
     build: ./backend
     ports:
       - 8000:8000
     depends_on:
-      - db.mysql
+      db.mysql:
+        condition: service_healthy
 
 volumes:
   mysql_db:
