CONF: add configuration about redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,20 @@ services:
       timeout: 2s
       retries: 10
 
+  db.redis:
+    container_name: db.redis
+    image: redis:7.0.12-alpine
+    restart: always
+    volumes:
+      - redis_db:/var/lib/redis
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+
   app:
     container_name: sns
     build: ./backend
@@ -35,6 +49,9 @@ services:
     depends_on:
       db.mysql:
         condition: service_healthy
+      db.redis:
+        condition: service_healthy
 
 volumes:
   mysql_db:
+  redis_db:
