--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ emails = "^0.6"
 jinja2 = "^3.1.2"
 alembic = "^1.10.2"
 add-trailing-comma = "^2.4.0"
+redis = "^4.6.0"
 
 
 [tool.poetry.group.test.dependencies]
@@ -45,6 +46,7 @@ markers = [
     "like_post",
     "unlike_post",
 ]
+
 
 
 [tool.poetry.group.dev.dependencies]
