FEAT: add pytest markers to add feature

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,7 @@ markers = [
     "reset_password",
     "change_password",
     "read_user",
+    "read_private_data",
     "update_user",
     "delete_user",
     "read_post",
