FEAT: change pytest.markers name - change read_likers to read_users_who_like - chagne read_likees to read_liked_posts

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -42,8 +42,8 @@ markers = [
     "create_post",
     "update_post",
     "delete_post",
-    "read_likers",
-    "read_likees",
+    "read_users_who_like",
+    "read_liked_posts",
     "like_post",
     "unlike_post",
     "read_followers",
