--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -53,6 +53,7 @@ markers = [
     "create_comment",
     "update_comment",
     "delete_comment",
+    "change_is_read_state_to_true"
 ]
 
 [tool.poetry.group.dev.dependencies]
