TEST: add a marker

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -53,6 +53,7 @@ markers = [
     "create_comment",
     "update_comment",
     "delete_comment",
+    "mark_as_read",
 ]
 
 [tool.poetry.group.dev.dependencies]
