--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ jinja2 = "^3.1.2"
 alembic = "^1.10.2"
 add-trailing-comma = "^2.4.0"
 redis = "^4.6.0"
+orjson = "^3.9.9"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.1"
@@ -55,6 +56,7 @@ markers = [
     "delete_comment",
     "mark_as_read",
 ]
+
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
