FEAT: add find_users feature on User domain

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,7 @@ markers = [
     "reset_password",
     "change_password",
     "read_user",
+    "find_users",
     "read_private_data",
     "update_user",
     "delete_user",
