TEST: add markers on Post domain - add find_posts marker

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,6 +41,7 @@ markers = [
     "read_posts",
     "read_posts_of_followers",
     "read_user_posts",
+    "find_posts",
     "create_post",
     "update_post",
     "delete_post",
